# rust-docker-aws-ecs

./: .gitignore  README.md  buildspec.yaml  dockerfile
.github/workflows/: ci-cd.yml
rust_microservice/: Cargo.toml  apprunner.yaml  dockerfile  makefile
rust_microservice/src/: main.rs
