[package]
name = "rust_microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"

actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
actix-rt = "2.5"  # Check for the latest compatible version with your Actix-web version
[dev-dependencies]
env_logger = "0.11.3"
log = "0.4.14"
